corner radius fix again cuz too much

--- a/style/home.css
+++ b/style/home.css
@@ -104,7 +104,7 @@ body {
     transform: TranslateX(-50%);
     height: 66.66vh;
     width: auto;
-    border-radius: 32px 32px 0px 0px;
+    border-radius: 24px 24px 0px 0px;
     -webkit-box-shadow: 0px 0px 96px 31px rgba(255,255,255,1);
 -moz-box-shadow: 0px 0px 96px 31px rgba(255,255,255,1);
 box-shadow: 0px 0px 96px 31px rgba(255,255,255,1);
